--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host=localhost --port=3000",
+    "start": "vite --host=localhost --port=3000",
     "build": "vite build",
     "preview": "vite preview"
   },
